--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,12 +5,13 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.15.10",
     "@mui/lab": "^5.0.0-alpha.165",
     "@mui/material": "^5.15.10",
     "axios": "^1.6.7",
     "bootstrap": "4.6.2",
-    "chart.js": "3.9.1",
+    "chart.js": "^3.9.1",
     "mdb-react-ui-kit": "^7.2.0",
     "perfect-scrollbar": "1.5.5",
     "pure-react-carousel": "^1.30.1",
