--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "start": "nodemon backend/server.js"
   },
   "dependencies": {
+    "@vonage/server-sdk": "^3.13.1",
     "axios": "^1.6.1",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.41.0",
@@ -16,6 +17,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
+    "firebase": "^10.8.1",
     "jsonwebtoken": "^9.0.0",
     "jspdf": "^2.5.1",
     "mongoose": "^6.9.0",
